--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <center><h1>We are legal</h1></center>
 <center>
   <table>
-    <th>&nbsp;<th><th>A</th><th>B</th>
-    <th>1<th><th>A1</th><th>B1</th>
-    <th>2<th><th>A2</th><th>B2</th>
+    <th>&nbsp;</th><th>A</th><th>B</th>
+    <th>1</th><th>A1</th><th>B1</th>
+    <th>2</th><th>A2</th><th>B2</th>
   </table>
 </center>
