--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>We are legal</title>
 <center><h1>We are legal</h1></center>
 <table>
-    <th>&nbsp;</th><th>A</th><th>B</th>
-    <th>1</th><th>A1</th><th>B1</th>
-    <th>2</th><th>A2</th><th>B2</th>
+    <tr><th>&nbsp;</th> <th>A</th> <th>B</th></tr>
+    <tr><th>1</th> <th>A1</th> <th>B1</th></tr>
+    <tr><th>2</th> <th>A2</th> <th>B2</th></tr>
 </table>
