--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <title>We are legal</title>
 <center><h1>We are legal</h1></center>
+
+<style>
+    table {
+  border-collapse: collapse;
+}
+
+table tr {
+  border-bottom: 1px solid black;
+}
+
+table tr:last-child {
+  border: 0;
+}
+</style>
+
 <center>
 <table>
     <tr><th>&nbsp;</th> <th>A</th> <th>B</th></tr>
