--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     }
 </style>
 <center>
-<table>
+<table border="1">
     <tr class="row"><th>&nbsp;</th> <th>A</th> <th>B</th></tr>
     <tr class="row"><th>1</th> <th>A1</th> <th>B1</th></tr>
     <tr class="row"><th>2</th> <th>A2</th> <th>B2</th></tr>
