--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <title>We are legal</title>
 <center><h1>We are legal</h1></center>
-<style>
-    .row {
-        border:1px solid black; 
-    }
-</style>
 <center>
-<table border="1">
-    <tr class="row"><th>&nbsp;</th> <th>A</th> <th>B</th></tr>
-    <tr class="row"><th>1</th> <th>A1</th> <th>B1</th></tr>
-    <tr class="row"><th>2</th> <th>A2</th> <th>B2</th></tr>
+<table border=1>
+    <tr><th>&nbsp;</th> <th>A</th> <th>B</th></tr>
+    <tr><th>1</th> <th>A1</th> <th>B1</th></tr>
+    <tr><th>2</th> <th>A2</th> <th>B2</th></tr>
 </table>
 </center>
