--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
     <tr><th>1</th> <th>A1</th> <th>B1</th></tr>
     <tr><th>2</th> <th>A2</th> <th>B2</th></tr>
 </table>
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
 </center>
