--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <tr><th>1</th> <th>A1</th> <th>B1</th></tr>
     <tr><th>2</th> <th>A2</th> <th>B2</th></tr>
 </table>
+<table>
+    <tr>
+        <th>&nbsp;</th> <th colspan="2">Columnas</th>
+    </tr>
+    <tr>
+        <th colspan="2">Filas</th>
+        <td>A1</td><td>B1</td>
+    </tr>
+    <tr>
+        <td>A2</td><td>B2</td>
+    </tr>
+</table>
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
 </center>
