--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <center><h1>We are legal</h1></center>
 <center>
 <table border=1>
-    <tr><th>&nbsp;</th> <th>A</th> <th>B</th></tr>
-    <tr><th>1</th> <th>A1</th> <th>B1</th></tr>
-    <tr><th>2</th> <th>A2</th> <th>B2</th></tr>
+    <tr>
+        <th>&nbsp;</th> <th>A</th> <th>B</th>
+    </tr>
+    <tr>
+        <th>1</th> <th>A1</th> <th>B1</th>
+    </tr>
+    <tr>
+        <th>2</th> <th>A2</th> <th>B2</th>
+    </tr>
 </table>
 <table>
     <tr>
