--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <th>2</th> <th>A2</th> <th>B2</th>
     </tr>
 </table>
-<table>
+<table border=1>
     <tr>
         <th>&nbsp;</th>
         <th colspan="2">Columnas</th>
