--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
 </center>
 <audio loop="loop" autoplay="true">
-            <source src="ynf-qhqnf-fba-ynf-rkcrpgngvinf-qr-yn-ernyvqnq.mp3" type="audio/mp3">
+            <source src="polishcow.mp3" type="audio/mp3">
         </audio>
 		<script>
 		document.onmousedown=disableclick;
